--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@adrianso/react-native-picker-select",
-    "version": "6.3.4",
+    "version": "6.3.5",
     "description": "A Picker component for React Native which emulates the native <select> interfaces for each platform",
     "license": "MIT",
     "author": "Michael Lefkowitz <lefkowitz.michael@gmail.com>",
@@ -24,11 +24,15 @@
         "/src"
     ],
     "dependencies": {
+        "@react-native-community/picker": "^1.3.0",
         "lodash.isequal": "^4.5.0",
         "react-native-modal": "^11.5.3"
     },
     "devDependencies": {
         "babel-jest": "^23.6.0",
+        "babel-plugin-add-module-exports": "^1.0.2",
+        "babel-plugin-transform-replace-object-assign": "^2.0.0",
+        "babel-preset-airbnb": "^2.0.0",
         "babel-preset-react-native": "^4.0.1",
         "enzyme": "^3.7.0",
         "enzyme-adapter-react-16": "^1.7.0",
@@ -67,6 +71,9 @@
         ],
         "snapshotSerializers": [
             "enzyme-to-json/serializer"
+        ],
+        "transformIgnorePatterns": [
+            "node_modules/?!(@react-native-community/picker)"
         ],
         "testPathIgnorePatterns": [
             "<rootDir>/demo/"
