--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@adrianso/react-native-picker-select",
-    "version": "6.3.5",
+    "version": "6.3.6",
     "description": "A Picker component for React Native which emulates the native <select> interfaces for each platform",
     "license": "MIT",
     "author": "Michael Lefkowitz <lefkowitz.michael@gmail.com>",
@@ -24,9 +24,11 @@
         "/src"
     ],
     "dependencies": {
-        "@react-native-community/picker": "^1.3.0",
         "lodash.isequal": "^4.5.0",
         "react-native-modal": "^11.5.3"
+    },
+    "peerDependencies": {
+        "@react-native-community/picker": "^1.3.0"
     },
     "devDependencies": {
         "babel-jest": "^23.6.0",
